version's author is given instead.  For the full (known) list of authors along
with their complete changes, see the AUTHORS file.

-------------------------------------------------------------------------------

* Changes in Cdecl 13.2

** `extern void v`
C allows you to declare an object of an incomplete type, so C allows:

    extern void v

Now cdecl does also.


* Changes in Cdecl 13.1

** `auto` type definitions and casts
Defining or casting a type containing `auto` is now correctly reported as an
error.

** C23 `auto`
Added support for `auto` as a deduced type in C23.

** C23 trigraphs
Trigraphs are no longer supported in C23.

** `_BitInt(<int>)` help
`_BitInt(<int>)` was added to the help text.

** Color prompt
Now printing the prompt in color even when readline is disabled.

** More English synonyms
The following English synonyms have been added:

                    boolean  _Bool
                    Boolean  _Bool
                     char 8  char8_t
                    char 16  char16_t
                    char 32  char32_t
                 const-eval  consteval
        constant-evaluation  consteval
                 const-expr  constexpr
        constant-expression  constexpr
                 const-init  constinit
    constant-initialization  constinit
           double precision  double
             floating point  float
               user defined  user-defined
             wide character  wchar_t

** C++ `auto` help
`auto` is now correctly listed as a C++ type in the help for C++11 and later.

** More pseudo-English type names
When explaining gibberish, print types in C/C++ (e.g., `int`), not pseudo-
English (e.g., `integer`).

** `--no-english-types`, `-T`, & `english-types`
Added command-line options to disable printing type names in pseuso-English and
corresponding `set` option.

** More english for user-defined conversions
User-defined conversions in pseudo-English now allow "const[ant] eval[uation]",