@@ -33,7 +33,7 @@
 .if !'\\$1'0' .sp
 ..
 .\" ---------------------------------------------------------------------------
-.TH \f3cdecl\fP 1 "January 7, 2022" "PJL TOOLS"
+.TH \f3cdecl\fP 1 "January 10, 2022" "PJL TOOLS"
 .SH NAME
 cdecl, c++decl \- compose and decipher C & C++ declarations and casts
 .SH SYNOPSIS
@@ -1200,6 +1200,8 @@ The terms on the left are synonyms for what's on the right:
                   accum  _Accum
                  atomic  _Atomic
               automatic  auto
+    bit precise integer  _BitInt
+    bit-precise integer  _BitInt
                    bool  _Bool
                 boolean  _Bool
                 Boolean  _Bool
