@@ -182,6 +182,8 @@ static cdecl_keyword_t const CDECL_KEYWORDS[] = {
   { L_as,             TOKEN( Y_as,                AC_LANG(NONE)             ) },
   { L_atomic,         C_SYA( L__Atomic,           AC_LANG(_Atomic)          ) },
   { L_automatic,      C_SYE( L_auto,              AC_LANG(NONE)             ) },
+  { L_bit,            TOKEN( Y_bit,               AC_LANG(NONE)             ) },
+  { H_bit_precise,    TOKEN( Y_bit_precise,       AC_LANG(_BitInt)          ) },
   { L_bits,           TOKEN( Y_bits,              AC_LANG(ANY)              ) },
   { L_bool,           C_SYN( true,                AC_LANG(NONE),
                         { LANG__Bool, L__Bool },
@@ -297,6 +299,7 @@ static cdecl_keyword_t const CDECL_KEYWORDS[] = {
   { L_overridden,     C_SYE( L_override,          AC_LANG(NONE)             ) },
   { L_point,          TOKEN( Y_point,             AC_LANG(ANY)              ) },
   { L_pointer,        TOKEN( Y_pointer,           AC_LANG(ANY)              ) },
+  { L_precise,        TOKEN( Y_precise,           AC_LANG(_BitInt)          ) },
   { L_precision,      TOKEN( Y_precision,         AC_LANG(ANY)              ) },
   { L_predef,         TOKEN( Y_predefined,        AC_LANG(NONE)             ) },
   { L_predefined,     TOKEN( Y_predefined,        AC_LANG(ANY)              ) },
