@@ -66,6 +66,8 @@ declare x as _BitInt 4 bits
 declare x as _BitInt width 4
 declare x as _BitInt width 4 bits
 declare x as _BitInt(4)
+declare x as bit-precise integer 4
+declare x as bit precise integer 4
 declare x as atomic int
 declare x as atomic pointer to int
 declare x as auto int
